[package]
name = "nixseparatedebuginfod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
base16 = "0.2.1"
compress-tools = { version = "0.14.0", features = [ "tokio_support" ] }
directories = "4.0.1"
futures-util = "0.3"
env_logger = "0.10.0"
log = "0.4.17"
object = "0.30.1"
once_cell = "1.17.0"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "sqlite" ] }
threadpool = "1.8.1"
tokio = { version = "1.24.1", features = ["process", "fs", "sync"] }
tokio-util = { version = "0.7.4", features = ["io-util"] }
walkdir = "2.3.2"
sha2 = "0.10.6"
axum = "0.6.2"
