# SPDX-FileCopyrightText: 2023 Guillaume Girol <symphorien+git@xlumurb.eu>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "nixseparatedebuginfod"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.68"
base16 = "0.2.1"
compress-tools = { version = "0.14.0", features = [ "tokio_support" ] }
directories = "4.0.1"
futures-util = "0.3"
object = "0.30.1"
once_cell = "1.17.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.24.1", features = ["process", "fs", "sync"] }
tokio-util = { version = "0.7.4", features = ["io-util"] }
walkdir = "2.3.2"
sha2 = "0.10.6"
axum = "0.6.2"
clap = { version = "4.1.1", features = [ "derive" ] }
tower-http = { version = "0.3.5", features = [ "trace" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3"
async-trait = "0.1"
async-recursion = "1"
axum-macros = "0.3.7"
reqwest = { version = "0.11.18", features = [ "stream" ] }
tikv-jemallocator = "0.5.4"

[dev-dependencies]
assert_cmd = "2"
rand = "0.8"
prctl = "1"
maplit = "1"
reqwest = { version = "0.11.18", features = [ "blocking" ] }
